--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,14 +70,14 @@ overflow-x: hidden;
 }
 
 .fixed-header {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0; /* Align the header to the left edge of the viewport */
     right: 0; /* Align the header to the right edge of the viewport */
     width: 100%;
     z-index: 1000; 
     background-color: #fff;
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 
 
@@ -150,11 +150,12 @@ overflow-x: hidden;
 nav {
     
     width: 100% !important;
-    position: fixed;
+    /* position: fixed; */
     z-index: 7;
     top: 0;
-    padding: 20px 0;
+    /* padding: 20px 0; */
     background-color: var(--white);
+    padding-top: 4px;
     height: max-content;
 }
 
@@ -296,7 +297,7 @@ li a {
 @media screen and (max-width: 1000px) {
 
     nav {
-        height: 110px;
+        /* height: 110px; */
         padding: 0;
        
     }
@@ -310,7 +311,8 @@ li a {
         justify-content: space-around;
         align-items: center;
         height: max-content;
-        padding: 12px 0;
+        /* padding: 12px 0; */
+        padding-top: 5px;
     }
 
     .mobile-menu {
@@ -1522,7 +1524,7 @@ input[type=text] {
     position: relative;
     padding: 100px 0;
     width: 100vw;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     height: 400px;
     background: url("../media/Outdoors/IMG_1752.jpg") no-repeat center center;
     -webkit-background-size: cover;
